kubernetes/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: hello-world
spec:
  replicas: 1 
  selector:  
    matchLabels:
      app: hello-world 
  template: 
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: 2807191453/hello-world
        ports:
        - containerPort: 8080
