kubernetes/service.yaml
apiVersion: v1
kind: Service   
metadata:
 name: hello-world
 labels:
   app: hello-world
spec:
 type: NodePort
 ports:
 - port: 8080  
   targetPort: 8080
 selector:
   app: hello-world
